tweaking issue with overlap of image-caption text on multi-line wrapping caption

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1283,7 +1283,8 @@ a.newer-posts:hover {
   text-align: center;
   font-size: .7rem;
   color: a0a0a0;
-  line-height: 0;
+  margin: 0;
+  line-height: 1.0;
   font-weight: 300;
 }
 
