--- a/assets/css/scss/parts/_post-page.scss
+++ b/assets/css/scss/parts/_post-page.scss
@@ -53,7 +53,8 @@
   text-align: center;
   font-size: .7rem;
   color: a0a0a0;
-  line-height: 0;
+  margin: 0;
+  line-height: 1.0;
   font-weight: 300;
 }
 
